tests/NormalTests/paczka1/small_fuzzy/49535626.err
Error in line 1: hlINXsleU S673 37,7
Error in line 8: S925 S956 86,3
